--- a/Profile.html
+++ b/Profile.html
@@ -1,16 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Biodata</title>
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
     <h1><b>Biodata Saya</b></h1>
-    <h2>Nama: <p>Ihwan Edi Saputro</p></h2><br>
-    <h2>Pekerjaan: <p>Mahasiswa IT</p></h2><br>
-    <h2>Tujuan: <p>Pengen bisa bikin web yang bagus lah</p></h2><br>
-    <h2>Hobi: <p>Rebahan</p></h2>
-</body>
+    <h2>
+      Nama:
+      <p>Ihwan Edi Saputro</p>
+    </h2>
+    <br />
+    <h2>
+      Pekerjaan:
+      <p>Mahasiswa IT</p>
+    </h2>
+    <br />
+    <h2>
+      Tujuan:
+      <p>Pengen bisa bikin web yang bagus lah</p>
+    </h2>
+    <br />
+    <h2>
+      Hobi:
+      <p>Rebahan</p>
+    </h2>
+  </body>
 </html>
