Modified profile.html, add profile.css and an image

--- a/Profile.html
+++ b/Profile.html
@@ -11,27 +11,19 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="Profile.css"/>
+    <img src="anime-minimalism-4k-4e.jpg" alt="anime-minimalism-4k-4e">
   </head>
   <body>
-    <h1><b>Biodata Saya</b></h1>
-    <h2>
-      Nama:
-      <p>Ihwan Edi Saputro</p>
-    </h2>
-    <br />
-    <h2>
-      Pekerjaan:
-      <p>Mahasiswa IT</p>
-    </h2>
-    <br />
-    <h2>
-      Tujuan:
-      <p>Pengen bisa bikin web yang bagus lah</p>
-    </h2>
-    <br />
-    <h2>
-      Hobi:
-      <p>Rebahan</p>
-    </h2>
+      <div id="landing-page">
+          <div id="landing-image"></div>
+          <div id="biodata">
+              <div class="biodata">Biodata</div>
+              <div class="header">Nama</div><p>Ihwan Edi Saputro</p>  
+              <div class="header">Pekerjaan</div><p>Mahasiswa IT</p>
+              <div class="header">Tujuan</div><p>Bikin web bagus</p>
+              <div class="header">Hobi</div>
+          </div>
+      </div>
   </body>
 </html>
